--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,3 +1,4 @@
+# vi:syntax=conf
 #################################
 #          Animations           #
 #################################
@@ -16,7 +17,7 @@ size-transition = true
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
 corner-radius = 0.0;
 rounded-corners-exclude = [
-#"window_type = 'normal'",
+# "window_type = 'normal'",
   "class_g = 'Dunst'",
   "class_g = 'awesome'",
   "class_g = 'URxvt'",
@@ -33,10 +34,10 @@ rounded-corners-exclude = [
   "class_g = 'Nightly'",
   "class_g = 'TelegramDesktop'",
   "class_g = 'firefox'",
+  "class_g = 'Firefox'",
   "class_g = 'Google-chrome'",
   "class_g = 'Thunderbird'",
   "class_g = 'dwm'",
-  "class_g = 'Firefox'",
   "class_g = 'Microsoft-edge-dev'",
   ];
 round-borders = 1;
@@ -118,28 +119,31 @@ shadow-offset-y = -7;
 
 shadow-exclude = [
     "! name~=''",
-    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
     "name = 'Notification'",
-    "class_g ?= 'Notify-osd'",
     "name = 'Plank'",
     "name = 'Docky'",
     "name = 'Kupfer'",
     "name = 'xfce4-notifyd'",
     "name *= 'VLC'",
     "name *= 'compton'",
+    "name *= 'picom'",
     "name *= 'Chromium'",
     "name *= 'Chrome'",
     "class_g = 'firefox' && argb",
+    "class_g = 'Firefox' && argb",
     "class_g = 'Conky'",
     "class_g = 'Kupfer'",
     "class_g = 'Synapse'",
     "class_g ?= 'Notify-osd'",
     "class_g ?= 'Cairo-dock'",
-    "class_g = 'Cairo-clock'",
     "class_g ?= 'Xfce4-notifyd'",
     "class_g ?= 'Xfce4-power-manager'",
     "_GTK_FRAME_EXTENTS@:c",
+    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
 ];
+
+# Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
+shadow-ignore-shaped = false;
 
 # Specify a X geometry that describes the region in which shadow should not
 # be painted in, such as a dock window region. Use
@@ -243,10 +247,10 @@ opacity-rule = [
   "100:class_g  = 'XTerm'",
   "100:class_g  = 'URxvt'",
   "100:class_g  = 'Fcitx5'",
-  "80:class_g  = 'kitty'",
+  "80:class_g   = 'kitty'",
   "100:class_g  = 'st-256color'",
   "100:class_g  = 'Zathura'",
-  "80:class_g  = 'Alacritty'",
+  "80:class_g   = 'Alacritty'",
   "100:class_g  = 'Rofi'",
   "100:class_g  = 'Emacs'",
   "100:class_g  = 'code-oss'",
@@ -457,7 +461,7 @@ use-damage = false
 # calls are finished before picom starts drawing. Needed on nvidia-drivers
 # with GLX backend for some users.
 #
-# xrender-sync-fence = false
+xrender-sync-fence = false
 
 # GLX backend: Use specified GLSL fragment shader for rendering window contents.
 # See `compton-default-fshader-win.glsl` and `compton-fake-transparency-fshader-win.glsl`
@@ -548,3 +552,4 @@ wintypes:
   popup_menu = { opacity = 1.0; }
   dropdown_menu = { opacity = 1.0; }
 };
+
