--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -46,7 +46,6 @@ round-borders = 1;
 #             Shadows           #
 #################################
 
-
 # Enabled client-side shadows on windows. Note desktop windows
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
@@ -134,6 +133,7 @@ shadow-exclude = [
     "class_g = 'Conky'",
     "class_g = 'Kupfer'",
     "class_g = 'Synapse'",
+    "class_g = 'Polybar'",
     "class_g ?= 'Notify-osd'",
     "class_g ?= 'Cairo-dock'",
     "class_g ?= 'Xfce4-notifyd'",
@@ -155,11 +155,9 @@ shadow-ignore-shaped = false;
 # Crop shadow of a window fully on a particular Xinerama screen to the screen.
 # xinerama-shadow-crop = false
 
-
 #################################
 #           Fading              #
 #################################
-
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
@@ -189,11 +187,9 @@ fade-exclude = [
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
 
-
 #################################
 #   Transparency / Opacity      #
 #################################
-
 
 opacity = 1.0;
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
@@ -211,7 +207,6 @@ frame-opacity = 1.0
 #If using these 2 below change their values in line 510 & 511 aswell
 popup_menu = { opacity = 1.0; }
 dropdown_menu = { opacity = 1.0; }
-
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -261,11 +256,9 @@ opacity-rule = [
   "100:class_g  = 'Thunderbird'"
 ];
 
-
 #################################
 #     Background-Blurring       #
 #################################
-
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method =
@@ -286,10 +279,8 @@ blur-background = false;
 #
 # blur-background-frame = false;
 
-
 # Use fixed blur strength rather than adjusting according to window opacity.
 # blur-background-fixed = false;
-
 
 # Specify the blur convolution kernel, with the following format:
 # example:
@@ -324,7 +315,6 @@ blur-background-exclude = [
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
-
 #################################
 #       General Settings        #
 #################################
@@ -338,7 +328,6 @@ blur-background-exclude = [
 experimental-backends = false;
 backend = "glx";
 # backend = "xrender";
-
 
 # Enable/disable VSync.
 vsync = false
@@ -552,4 +541,3 @@ wintypes:
   popup_menu = { opacity = 1.0; }
   dropdown_menu = { opacity = 1.0; }
 };
-
