--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,10 +1,10 @@
 # Colors
 include themes/onedark.conf
 
-font_family           Hack Nerd Font Mono
-bold_font             auto
-italic_font           auto
-bold_italic_font      auto
+font_family           Hack Regular Nerd Font Complete Mono
+bold_font             Hack Bold Nerd Font Complete Mono
+italic_font           Hack Italic Nerd Font Complete Mono
+bold_italic_font      Hack Bold Italic Nerd Font Complete Mono
 font_size             15.0
 
 window_padding_width  10.0
