--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,8 @@
 # vim: ft=kitty
 # Colors
-include themes/onedark.conf
+include themes/fjord.conf
+
+background_opacity 1.0
 
 font_family           Hack Regular Nerd Font Complete Mono
 bold_font             Hack Bold Nerd Font Complete Mono
