--- a/.config/kitty/themes/onedark.conf
+++ b/.config/kitty/themes/onedark.conf
@@ -2,7 +2,8 @@
 # This work is licensed under the terms of the GPL-2.0 license.
 # For a copy, see https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html.
 
-foreground #979eab
+# foreground #979eab
+foreground #B3B8C3
 # background #282c34
 background #1E222A
 cursor #cccccc
