--- a/.config/kitty/themes/nord.conf
+++ b/.config/kitty/themes/nord.conf
@@ -2,6 +2,7 @@
 #
 # Nord
 foreground            #D8DEE9
+# foreground            #B3B8C3
 # background            #2E3440
 background            #242831
 selection_foreground  #000000
