--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,12 +1,13 @@
 # vim: ft=config
 
-source=~/.config/hypr/rules.conf
-
 $primon = DP-2
 $secmon = DP-3
 
 monitor = $primon, 2560x1440@120, 0x0, 1
 monitor = $secmon, 1920x1080@60, 2560x180, 1
+
+workspace = $primon, 1
+workspace = $secmon, 10
 
 # Execute your favorite apps at launch
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -18,12 +19,13 @@ exec-once = /usr/lib/kdeconnectd
 exec-once = udiskie --appindicator
 exec-once = nm-applet --indicator
 exec-once = kdeconnect-indicator
+# exec-once = wl-paste -p --watch wl-copy -pc
 exec-once = ~/.config/hypr/scripts/autostart
 
 exec = hyprpaper
 
 input {
-    kb_layout = fr
+    kb_layout = fr,us
     # kb_variant = nodeadkeys
 
     follow_mouse = true
@@ -48,23 +50,26 @@ general {
 
 decoration {
     rounding = 5
-    blur = yes
+    blur = true
     blur_size = 3
     blur_passes = 1
-    blur_new_optimizations = on
+    blur_new_optimizations = true
 
-    drop_shadow = yes
-    shadow_range = 4
+    drop_shadow = true
+    shadow_ignore_window = true
+    shadow_offset = 0 5
+    shadow_range = 50
     shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    col.shadow = rgba(00000099)
+    # col.shadow = rgba(1a1a1aee)
 }
 
 animations {
-      enabled = yes
-      animation = border, 1, 2, default
-      animation = fade, 1, 4, default
-      animation = windows, 1, 3, default, popin 80%
-      animation = workspaces, 1, 2, default, slide
+    enabled = true
+    animation = border, 1, 2, default
+    animation = fade, 1, 4, default
+    animation = windows, 1, 3, default, popin 80%
+    animation = workspaces, 1, 2, default, slide
 }
 
 dwindle {
@@ -82,9 +87,10 @@ master {
 misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
-    # no_vfr = false
+    vfr = true
+    vrr = true
     enable_swallow = true
-    swallow_regex = ^(foot:kitty:Alacritty)$
+    swallow_regex = ^(kitty|Alacritty)$
 }
 
 binds {
@@ -95,6 +101,84 @@ binds {
 debug {
     # overlay = true
 }
+
+windowrule = float, file_progress
+windowrule = float, confirm
+windowrule = float, dialog
+windowrule = float, download
+windowrule = float, notification
+windowrule = float, error
+windowrule = float, splash
+windowrule = float, confirmreset
+windowrule = float, title:Open File
+windowrule = float, title:branchdialog
+windowrule = float, Lxappearance
+windowrule = float, Rofi
+windowrule = float, viewnior
+windowrule = float, Viewnior
+windowrule = float, feh
+windowrule = float, pavucontrol
+windowrule = float, file-roller
+
+# Floats
+# windowrulev2 = float,class:^(pavucontrol)$
+# windowrulev2 = float,class:^(thunar)$,title:^(File Operation Progress)$
+# windowrulev2 = float,class:^(thunar)$,title:^(Confirm to replace files)$
+
+# gnome Calculator
+windowrulev2 = float,class:^(org.gnome.Calculator)$
+windowrulev2 = size 360 500,class:^(org.gnome.Calculator)$
+
+# SteamTinkerLaunch
+windowrulev2 = float,class:^(yad)$,title:^(SteamTinkerLaunch.*)$
+windowrulev2 = size 80% 80%,class:^(yad)$,title:^(SteamTinkerLaunch.*)$
+windowrulev2 = center,class:^(yad)$,title:^(SteamTinkerLaunch.*)$
+
+# Firefox
+$ff_float = (Library|Opening|Extension:).*
+windowrulev2 = float,class:^(firefox)$,title:^($ff_float)$
+windowrulev2 = size 70% 70%,class:^(firefox)$,title:^(Library)$
+windowrulev2 = center,class:^(firefox)$,title:^($ff_float)$
+# make Firefox PiP window floating and sticky
+windowrulev2 = float, title:^(Picture-in-Picture)$
+windowrulev2 = pin, title:^(Picture-in-Picture)$
+
+# throw sharing indicators away
+windowrulev2 = workspace special silent, title:^(Firefox — Sharing Indicator)$
+windowrulev2 = workspace special silent, title:^(.*is sharing (your screen|a window)\.)$
+
+# start spotify tiled in ws8
+windowrulev2 = tile, class:^(Spotify)$
+windowrulev2 = workspace 8 silent, class:^(Spotify)$
+
+# Guitarix
+windowrulev2 = workspace 8 silent,class:^(guitarix)$
+
+# Jellyfin Media Player
+windowrulev2 = workspace 9 silent,class:^(Jellyfin Media Player)$
+
+# Steam
+windowrulev2 = workspace 4 silent,class:^(Steam)$
+
+# Lutris
+windowrulev2 = workspace 4 silent,class:^(lutris)$
+windowrulev2 = size 60% 90%,class:^(lutris)$,title:^(Configure)(.*)$
+windowrulev2 = center,class:^(lutris)$,title:^(Configure)(.*)$
+
+# Bottles
+windowrulev2 = workspace 4 silent,class:^(com.usebottles.bottles)$
+windowrulev2 = size 830 80%,class:^(bottles)$,title:^(Preferences)$
+windowrulev2 = center,class:^(bottles)$,title:^(Preferences)$
+
+# idle inhibit while watching videos
+windowrulev2 = idleinhibit focus, class:^(mpv|.+exe)$
+windowrulev2 = idleinhibit focus, class:^(firefox)$, title:^(.*YouTube.*)$
+windowrulev2 = idleinhibit fullscreen, class:^(firefox)$
+
+# fix xwayland apps
+windowrulev2 = dimaround, class:^(gcr-prompter)$
+windowrulev2 = rounding 0, xwayland:1, floating:1
+windowrulev2 = center, class:^(.*jetbrains.*)$, title:^(Confirm Exit)$
 
 # keybinds
 $1 = ampersand
@@ -119,6 +203,7 @@ bind = SUPERCTRL,  R, exec, bash -c "killall waybar; waybar"
 bind = SUPER, Return, exec, $TERMINAL
 bind = SUPER, R,      exec, rofi -show drun -show-icons
 bind = SUPERSHIFT, P, exec, powermenu
+bind = SUPER, L,      exec, ~/.config/hypr/scripts/switch_layout
 bind = SUPER, E,      exec, $FILE_MANAGER_GUI
 
 bind = SUPER, T,    togglefloating, 
