--- a/.config/hypr/scripts/workspace
+++ b/.config/hypr/scripts/workspace
@@ -1,41 +1,41 @@
-#! /bin/bash
-# yanked from https://github.com/taylor85345
+#!/bin/bash
 
-monitors=/tmp/hypr/monitors_temp
-hyprctl monitors > $monitors
+monitors=$(hyprctl monitors -j)
 
 prevworkspace_temp=/tmp/hypr/prevworkspace_temp
 prevworkspace=$(cat "$prevworkspace_temp")
-currworkspace=$(grep -B 4 "focused: yes" "$monitors" | awk 'NR==1 {print $3}')
+currworkspace=$(echo "$monitors" | jq '.[] | select(.focused==true) | .activeWorkspace.id')
 
+# Save current workspace before switching to new
+if [[ $1 != "$currworkspace" ]]; then
+  echo $currworkspace > $prevworkspace_temp
+fi
+
+# Switch to previous workspace and quit
 if [[ $1 == "prev" ]]; then
   hyprctl dispatch workspace "$prevworkspace"
+  exit 0
 fi
 
-if [[ $1 -ne "$currworkspace" ]]; then
-  grep -B 4 "focused: yes" "$monitors" | awk 'NR==1 {print $3}' > $prevworkspace_temp
-fi
+activemonitor=$(echo "$monitors" | jq '.[] | select(.focused==true) | .id')
+passivemonitor=$(echo "$monitors" | jq '.[] | select(.focused==false) | .id')
+passivews=$(echo "$monitors" | jq '.[] | select(.focused==false) | .activeWorkspace.id')
 
-if [[ -z $1 ]]; then
-  workspace=$(grep -B 4 "focused: no" "$monitors" | awk 'NR==1 {print $3}')
+# Swap 
+if [[ $1 = "" ]]; then
+  workspace=$(echo "$monitors" | jq '.[] | select(.focused==false) | .activeWorkspace.id')
+  exit 0
 else
   workspace=$1
 fi
 
-activemonitor=$(grep -B 10 "focused: yes" "$monitors" | awk 'NR==1 {print $2}')
-passivemonitor=$(grep  -B 6 "($workspace)" "$monitors" | awk 'NR==1 {print $2}')
-# activews=$(grep -A 2 "$activemonitor" "$monitors" | awk 'NR==3 {print $1}' RS='(' FS=')')
-passivews=$(grep -A 4 "$passivemonitor" "$monitors" | awk 'NR==4 {print $1}' RS='(' FS=')')
-
-if [[ $workspace -eq $passivews ]] && [[ $activemonitor != "$passivemonitor" ]]; then
+if [[ $workspace = $passivews ]] && [[ $activemonitor != "$passivemonitor" ]]; then
   hyprctl dispatch swapactiveworkspaces "$activemonitor" "$passivemonitor"
 else
   hyprctl keyword general:no_cursor_warps 1
-  hyprctl dispatch moveworkspacetomonitor "$workspace" "$activemonitor"
+  hyprctl dispatch moveworkspacetomonitor "$workspace $activemonitor"
   hyprctl dispatch workspace "$workspace"
   hyprctl keyword general:no_cursor_warps 0
 fi
-
-echo $prevworkspace
 
 exit 0
