--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -79,9 +79,14 @@ dwindle {
 }
 
 master {
+    special_scale_factor = 0.9
+    mfact = 0.5
     new_is_master = false
     new_on_top = false
     no_gaps_when_only = true
+    inherit_fullscreen = true
+    orientation = left
+    always_center_master = false
 }
 
 misc {
@@ -192,8 +197,8 @@ $8 = underscore
 $9 = ccedilla
 $0 = agrave
 
-bind = SUPER, X,      killactive, 
-bind = SUPER, M,      exit, 
+bind = SUPER, X,      killactive,
+bind = SUPER, M,      exit,
 bind = SUPER, F,      fullscreen, 0
 bind = SUPERSHIFT, F, fullscreen, 1
 bind = SUPERCTRL,  F, fakefullscreen
@@ -206,7 +211,7 @@ bind = SUPERSHIFT, P, exec, powermenu
 bind = SUPER, L,      exec, ~/.config/hypr/scripts/switch_layout
 bind = SUPER, E,      exec, $FILE_MANAGER_GUI
 
-bind = SUPER, T,    togglefloating, 
+bind = SUPER, T,    togglefloating,
 bind = SUPER, P,    pseudo, # dwindle
 bind = SUPER, J,    togglesplit, # dwindle
 
@@ -216,15 +221,15 @@ binde = SUPER, right, movefocus, r
 binde = SUPER, up,    movefocus, u
 binde = SUPER, down,  movefocus, d
 
-bind = SUPERSHIFT, left,  movewindow, l
-bind = SUPERSHIFT, right, movewindow, r
-bind = SUPERSHIFT, up,    movewindow, u
-bind = SUPERSHIFT, down,  movewindow, d
+bind = SUPERSHIFT,  left,  movewindow, l
+bind = SUPERSHIFT,  right, movewindow, r
+bind = SUPERSHIFT,  up,    movewindow, u
+bind = SUPERSHIFT,  down,  movewindow, d
 
-binde = SUPERCTRL, left,  resizeactive, -40 0
-binde = SUPERCTRL, right, resizeactive, 40 0
-binde = SUPERCTRL, up,    resizeactive, 0 -40
-binde = SUPERCTRL, down,  resizeactive, 0 40
+binde = SUPERCTRL,  left,  resizeactive, -40 0
+binde = SUPERCTRL,  right, resizeactive, 40 0
+binde = SUPERCTRL,  up,    resizeactive, 0 -40
+binde = SUPERCTRL,  down,  resizeactive, 0 40
 
 binde = SUPERSHIFT, left,  moveactive, -40 0
 binde = SUPERSHIFT, right, moveactive, 40 0
@@ -240,7 +245,7 @@ bind = SUPER,      Tab, exec, ~/.config/hypr/scripts/workspace prev
 # bind = SUPERSHIFT, Tab, workspace, m+1
 
 bind = SUPER,      Space, togglespecialworkspace,
-bind = SUPERSHIFT, Space, movetoworkspace, special 
+bind = SUPERSHIFT, Space, movetoworkspace, special
 
 bind = ALT,      Tab,  cyclenext
 bind = ALTSHIFT, Tab,  cyclenext, prev
@@ -262,7 +267,7 @@ bind = SUPER, $8, exec, ~/.config/hypr/scripts/workspace 8
 bind = SUPER, $9, exec, ~/.config/hypr/scripts/workspace 9
 bind = SUPER, $0, exec, ~/.config/hypr/scripts/workspace 10
 
-bind = SUPER, w,  exec, ~/.config/hypr/scripts/workspace 
+bind = SUPER, w,  exec, ~/.config/hypr/scripts/workspace
 
 bind = SUPERSHIFT, $1, movetoworkspacesilent, 1
 bind = SUPERSHIFT, $2, movetoworkspacesilent, 2
