--- a/.config/kitty/themes/fjord.conf
+++ b/.config/kitty/themes/fjord.conf
@@ -1,13 +1,17 @@
-# vim: ft=conf
-#
-# Nord
-# foreground            #D8DEE9
+# vim: ft=kitty
+
+# Fjord
 foreground            #B3B8C3
 background            #1e222a
 selection_foreground  #303742
 selection_background  #B3B8C3
 url_color             #0087BD
 cursor                #81A1C1
+
+active_tab_foreground   #303742
+active_tab_background   #81A1C1
+inactive_tab_foreground #B3B8C3
+inactive_tab_background #303742
 
 # black
 color0   #3B4252
