--- a/.config/hypr/rules.conf
+++ b/.config/hypr/rules.conf
@@ -1,38 +1,48 @@
 # vim: ft=config
 
 # idle inhibit
-windowrulev2 = idleinhibit focus, class:^(mpv)$
-windowrulev2 = idleinhibit fullscreen, class:^(firefox)$
+# windowrulev2 = idleinhibit focus, class:^(mpv)$
+# windowrulev2 = idleinhibit fullscreen, class:^(firefox)$
 
 windowrulev2 = float,class:^(pavucontrol)$
-windowrulev2 = float,class:^(file-roller)$
+windowrulev2 = float,class:^(thunar)$,title:^(File Operation Progress)$
+windowrulev2 = float,class:^(thunar)$,title:^(Confirm to replace files)$
+
+# windowrulev2 = float,class:^(file-roller)$
+
+# SteamTinkerLaunch
+windowrulev2 = float,class:^(yad)$,title:^(SteamTinkerLaunch.*)$
+windowrulev2 = size 80% 80%,class:^(yad)$,title:^(SteamTinkerLaunch.*)$
+windowrulev2 = center,class:^(yad)$,title:^(SteamTinkerLaunch.*)$
+
+# gnome Calculator
+windowrulev2 = float,class:^(org.gnome.Calculator)$
+windowrulev2 = size 360 500,class:^(org.gnome.Calculator)$
 
 # gamescope
 windowrulev2 = noblur,class:^(gamescope)$
 windowrulev2 = fullscreen,class:^(gamescope)$
 # windowrulev2 = workspace 6 silent, class:^(gamescope)$
 
-# wlogout
-windowrulev2 = noanim,class:^(wlogout)$
-windowrulev2 = float,class:^(wlogout)$
-windowrulev2 = rounding 0,class:^(wlogout)$
-windowrulev2 = noborder,class:^(wlogout)$
-windowrulev2 = size 100% 100%, class:^(wlogout)$
-windowrulev2 = center,class:^(wlogout)$
-windowrulev2 = fullscreen,class:^(wlogout)$
-
 # Firefox
-# windowrulev2 = maximize,title:^(.*Mozilla Firefox)$
-# windowrulev2 = maximize,title:^(.*Mozilla Firefox Private Browsing)$
-windowrulev2 = float,class:^(firefox)$,title:^(Library)$
-windowrulev2 = size 70% 70%,class:^(firefox)$,title:^(Library)$
-windowrulev2 = center,class:^(firefox)$,title:^(Library)$
+# $ff_float = (Library|Opening|Extension:).*
+# windowrulev2 = maximize,class:^(firefox)$,title:^((?!Extension:).*(Mozilla Firefox|Mozilla Firefox Private Browsing))$
+# windowrulev2 = maximize,class:^(firefox)$,title:^(.*(Mozilla Firefox|Mozilla Firefox Private Browsing))$
+# windowrulev2 = maximize,class:^(firefox)$,title:^(.*Mozilla Firefox Private Browsing.*)$
+# windowrulev2 = tile,class:^(firefox)$,title:^($ff_float)$
+# windowrulev2 = float,class:^(firefox)$,title:^($ff_float)$
+# windowrulev2 = size 70% 70%,class:^(firefox)$,title:^(Library)$
+# windowrulev2 = center,class:^(firefox)$,title:^($ff_float)$
 # make Firefox PiP window floating and sticky
 windowrulev2 = float,title:^(Picture-in-Picture)$
 windowrulev2 = pin,title:^(Picture-in-Picture)$
 
+# Guitarix
+windowrulev2 = workspace 8 silent,class:^(guitarix)$
+
 # Jellyfin Media Player
 windowrulev2 = workspace 9 silent,class:^(Jellyfin Media Player)$
+# windowrulev2 = workspace 9 silent,class:^(org.jellyfin.jellyfinmediaplayer)$
 # windowrulev2 = maximize,class:^(Jellyfin Media Player)$,title:^(Jellyfin Media Player)$
 
 # Spotify
@@ -42,15 +52,19 @@ windowrulev2 = workspace 9 silent,class:^(Spotify)$
 # Steam
 windowrulev2 = workspace 4 silent,class:^(Steam)$
 # windowrulev2 = maximize,class:^(Steam)$,title:^(Steam)$
-windowrulev2 = float,class:^(Steam)$,title:^(Steam - News)$
-windowrulev2 = float,class:^(Steam)$,title:^(Friends List)$
+# windowrulev2 = float,class:^(Steam)$,title:^(Steam - News|Friends List)$
+# windowrulev2 = float,class:^(Steam)$,title:^(Friends List)$
 # windowrulev2 = workspace 6, class:^(steam_app)(.*)$
 # windowrulev2 = tile, class:^(steam_app)(.*)$
 
 # Lutris
 windowrulev2 = workspace 4 silent,class:^(lutris)$
+windowrulev2 = size 60% 90%,class:^(lutris)$,title:^(Configure)(.*)$
+windowrulev2 = center,class:^(lutris)$,title:^(Configure)(.*)$
 # windowrulev2 = maximize,class:^(lutris)$,title:^(Lutris)$
 
-# Bottes
+# Bottles
 windowrulev2 = workspace 4 silent,class:^(com.usebottles.bottles)$
+windowrulev2 = size 830 80%,class:^(bottles)$,title:^(Preferences)$
+windowrulev2 = center,class:^(bottles)$,title:^(Preferences)$
 # windowrulev2 = maximize,class:^(com.usebottles.bottles)$,title:^(Bottles)$
