--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,20 +1,5 @@
-# vim: ft=kitty
 # Colors
 include themes/fjord.conf
-#
-# background_opacity 1.0
-#
-# font_family           Hack Regular Nerd Font Complete Mono
-# bold_font             Hack Bold Nerd Font Complete Mono
-# italic_font           Hack Italic Nerd Font Complete Mono
-# bold_italic_font      Hack Bold Italic Nerd Font Complete Mono
-# font_size             15.0
-#
-# window_padding_width  10.0
-#
-# open_url_with         firefox
-#
-# enable_audio_bell     no
 
 # Fonts
 font_family                 Hack Regular Nerd Font Complete Mono
@@ -23,119 +8,66 @@ italic_font                 Hack Italic Nerd Font Complete Mono
 bold_italic_font            Hack Bold Italic Nerd Font Complete Mono
 font_size                   15.0
 
-adjust_line_height 					0
-adjust_column_width 				0
-box_drawing_scale 					0.001, 1, 1.5, 2
-
 # Cursor
 cursor_shape     						underline
-cursor_blink_interval     	-1
-cursor_stop_blinking_after 	15.0
 
 # Scrollback
 scrollback_lines 						10000
-scrollback_pager 						/usr/bin/less
-wheel_scroll_multiplier 		5.0
 
 # URLs
-url_style 									double
-open_url_modifiers 					ctrl+shift
-open_url_with 							default
-copy_on_select 							yes
-
-# Selection
-rectangle_select_modifiers 	ctrl+shift
-select_by_word_characters 	:@-./_~?&=%+#
-
-# Mouse
-click_interval 							0.5
-mouse_hide_wait 						0
-focus_follows_mouse 				no
-
-# Performance
-repaint_delay    						20
-input_delay 								2
-sync_to_monitor 						no
+url_style curly
+#: The color and style for highlighting URLs on mouse-over. url_style
+#: can be one of: none, straight, double, curly, dotted, dashed.
 
 # Bell
-visual_bell_duration 				0.0
-enable_audio_bell 					no
-bell_on_tab									no
+enable_audio_bell no
 
 # Window
-remember_window_size   			no
-initial_window_width   			350
-initial_window_height  			700
 window_border_width 				0
-window_margin_width 				5
+window_margin_width 				0
 window_padding_width 				5
 inactive_text_alpha 				1.0
 background_opacity 					0.9
 placement_strategy 					center
 hide_window_decorations 		yes
 
-# Layouts
-enabled_layouts 						*
-
 # Tabs
-tab_bar_edge 								bottom
-tab_bar_style 							powerline
-tab_bar_margin_width 				0.0
-tab_separator 							" ┇ "
-active_tab_font_style 			bold
-inactive_tab_font_style 		normal
+tab_bar_style powerline
 
-# Shell
-shell 										  .
-close_on_child_death 				no
-allow_remote_control 				yes
-term 										    xterm-kitty
+tab_powerline_style angled
+#: The powerline separator style between tabs in the tab bar when
+#: using powerline as the tab_bar_style, can be one of: angled,
+#: slanted, round.
 
-# Keys
-map ctrl+shift+v        		paste_from_clipboard
-map ctrl+shift+s        		paste_from_selection
-map ctrl+shift+c        		copy_to_clipboard
-map shift+insert					  paste_from_selection
+tab_activity_symbol none
+#: Some text or a Unicode symbol to show on the tab if a window in the
+#: tab that does not have focus has some activity. If you want to use
+#: leading or trailing spaces, surround the text with quotes. See
+#: tab_title_template for how this is rendered.
 
-map ctrl+shift+up        		scroll_line_up
-map ctrl+shift+down      		scroll_line_down
-map ctrl+shift+k         		scroll_line_up
-map ctrl+shift+j         		scroll_line_down
-map ctrl+shift+page_up   		scroll_page_up
-map ctrl+shift+page_down 		scroll_page_down
-map ctrl+shift+home      		scroll_home
-map ctrl+shift+end       		scroll_end
-map ctrl+shift+h         		show_scrollback
+allow_remote_control no
 
-map ctrl+shift+enter    		new_window
-map ctrl+shift+n        		new_os_window
-map ctrl+shift+w        		close_window
-map ctrl+shift+]        		next_window
-map ctrl+shift+[        		previous_window
-map ctrl+shift+f        		move_window_forward
-map ctrl+shift+b        		move_window_backward
-map ctrl+shift+`        		move_window_to_top
-map ctrl+shift+1        		first_window
-map ctrl+shift+2        		second_window
-map ctrl+shift+3        		third_window
-map ctrl+shift+4        		fourth_window
-map ctrl+shift+5        		fifth_window
-map ctrl+shift+6        		sixth_window
-map ctrl+shift+7        		seventh_window
-map ctrl+shift+8        		eighth_window
-map ctrl+shift+9        		ninth_window
-map ctrl+shift+0        		tenth_window
+#: Allow other programs to control kitty. If you turn this on, other
+#: programs can control all aspects of kitty, including sending text
+#: to kitty windows, opening new windows, closing windows, reading the
+#: content of windows, etc. Note that this even works over SSH
+#: connections. The default setting of no prevents any form of remote
+#: control. The meaning of the various values are:
 
-map ctrl+shift+right    		next_tab
-map ctrl+shift+left     		previous_tab
-map ctrl+shift+t        		new_tab
-map ctrl+shift+q        		close_tab
-map ctrl+shift+l        		next_layout
-map ctrl+shift+.        		move_tab_forward
-map ctrl+shift+,        		move_tab_backward
-map ctrl+shift+alt+t    		set_tab_title
+#: password
+#:     Remote control requests received over both the TTY device and the socket are
+#:     confirmed based on passwords, see remote_control_password.
 
-map ctrl+shift+equal    		increase_font_size
-map ctrl+shift+minus    		decrease_font_size
-map ctrl+shift+backspace 		restore_font_size
-map ctrl+shift+f6     			set_font_size 16.0
+#: socket-only
+#:     Remote control requests received over a socket are accepted unconditionally.
+#:     Requests received over the TTY are denied. See listen_on.
+
+#: socket
+#:     Remote control requests received over a socket are accepted unconditionally.
+#:     Requests received over the TTY are confirmed based on password.
+
+#: no
+#:     Remote control is completely disabled.
+
+#: yes
+#:     Remote control requests are always accepted.
