--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -9,10 +9,10 @@ bold_italic_font            Hack Bold Italic Nerd Font Complete Mono
 font_size                   15.0
 
 # Cursor
-cursor_shape     						underline
+cursor_shape                underline
 
 # Scrollback
-scrollback_lines 						10000
+scrollback_lines            10000
 
 # URLs
 url_style curly
@@ -23,13 +23,13 @@ url_style curly
 enable_audio_bell no
 
 # Window
-window_border_width 				0
-window_margin_width 				0
-window_padding_width 				5
-inactive_text_alpha 				1.0
-background_opacity 					0.9
-placement_strategy 					center
-hide_window_decorations 		yes
+window_border_width         0
+window_margin_width         0
+window_padding_width        5
+inactive_text_alpha         1.0
+background_opacity          0.9
+placement_strategy          center
+hide_window_decorations     yes
 
 # Tabs
 tab_bar_style powerline
@@ -46,6 +46,10 @@ tab_activity_symbol none
 #: tab_title_template for how this is rendered.
 
 allow_remote_control no
+
+clipboard_control write-clipboard write-primary # read-clipboard-ask read-primary-ask
+clipboard_max_size 512
+
 
 #: Allow other programs to control kitty. If you turn this on, other
 #: programs can control all aspects of kitty, including sending text
