uodate hyprland.conf

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -29,37 +29,41 @@
 # env = WLR_DRM_NO_ATOMIC,1
 
 
+$monitor1 = DP-3
+$monitor2 = DP-2
+
+
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
-monitor = DP-3, 2560x1440@120, 0x0, 1
-monitor = DP-2, 1920x1080@60, 2560x180, 1
-# monitor = DP-2, preferred, 0x0, 1
-# monitor = DP-3, preferred, 2560x180, 1
+monitor = $monitor1, 2560x1440@120, 0x0, 1
+monitor = $monitor2, 1920x1080@60, 2560x180, 1
+# monitor = $monitor2, preferred, 0x0, 1
+# monitor = $monitor1, preferred, 2560x180, 1
 
 # Monitor work around
 # exec-once=wlr-randr --output <secondary monitor> --off && sleep <any number will probably work, I put 3 though> && wlr-randr --output <secondary monitor> --on --pos <the pos in the format of #,#>
-exec-once = wlr-randr --output DP-2 --off && sleep 3 && wlr-randr --output DP-2 --on --pos 2560,180
+exec-once = wlr-randr --output $monitor2 --off && sleep 3 && wlr-randr --output $monitor2 --on --pos 2560,180
 
-workspace = DP-3, 1, default:true
-workspace = DP-2, 10, default:true
-workspace = DP-3, 2
-workspace = DP-3, 3
-workspace = DP-3, 4
-workspace = DP-3, 5
-workspace = DP-2, 6
-workspace = DP-2, 7
-workspace = DP-2, 8
-workspace = DP-2, 9
+workspace = $monitor1, 1, default:true
+workspace = $monitor2, 10, default:true
+workspace = $monitor1, 2
+workspace = $monitor1, 3
+workspace = $monitor1, 4
+workspace = $monitor1, 5
+workspace = $monitor2, 6
+workspace = $monitor2, 7
+workspace = $monitor2, 8
+workspace = $monitor2, 9
 # workspace = special:term2, on-created-empty:kitty # 0.32 ?
 
-# workspace = DP-3, 1,6
-# workspace = DP-2, 10
-# workspace = DP-2, 7,8,9
-# workspace = DP-2, 8
-# workspace = DP-2, 9
+# workspace = $monitor1, 1,6
+# workspace = $monitor2, 10
+# workspace = $monitor2, 7,8,9
+# workspace = $monitor2, 8
+# workspace = $monitor2, 9
 
 # Plugins
 # exec-once = $HOME/.local/share/hyprload/hyprload.sh
@@ -352,16 +356,19 @@ bind = SHIFTCTRL,       $3,           movetoworkspace, special:term3
 bind = SHIFTCTRL,       $4,           movetoworkspace, special:term4
 # bind = CTRLSHIFT,       Space,        movetoworkspace, special:floats
 
-bind = ALT,             Tab,          cyclenext,          # change focus to another window
-bind = ALT,             Tab,          bringactivetotop,   # bring it to the top
-bind = ALTSHIFT,        Tab,          cyclenext,         prev
-bind = CTRL,            Tab,          exec,              pkill rofi || $HOME/.config/hypr/scripts/swytch.sh
+bind = ALT,             Tab,          cyclenext,            # change focus to another window
+bind = ALT,             Tab,          bringactivetotop,     # bring it to the top
+bind = ALTSHIFT,        Tab,          cyclenext,            prev
+bind = CTRL,            Tab,          exec,                 pkill rofi || $HOME/.config/hypr/scripts/swytch.sh
 
-bind = SUPER,           twosuperior,  focusmonitor,      +1
+bind = SUPER,           twosuperior,  focusmonitor,         +1
 bind = SUPERCTRL,       twosuperior,  swapactiveworkspaces, current +1
-bind = SUPER,           Tab,          workspace,         previous
-bind = SUPERSHIFT,      Tab,          workspace,         e+1
+bind = SUPER,           Tab,          workspace,            previous
+bind = SUPERSHIFT,      Tab,          workspace,            e+1
 bind = SUPERCTRL,       Tab,          movecurrentworkspacetomonitor, +1
+
+bind = SUPERCTRLSHIFT,  $1,           movecurrentworkspacetomonitor, $monitor1
+bind = SUPERCTRLSHIFT,  $2,           movecurrentworkspacetomonitor, $monitor2
 
 bind = SUPERALT,        left,         workspace, e-1 
 bind = SUPERALT,        right,        workspace, e+1 
