update hyprland config

--- a/.config/hypr/config/theme.conf
+++ b/.config/hypr/config/theme.conf
@@ -1,6 +1,20 @@
-exec = hyprctl setcursor Bibata-Modern-Ice 20
-exec = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
-exec = gsettings set org.gnome.desktop.interface cursor-size 40
+#  _____ _   _ _____ __  __ _____ ____
+# |_   _| | | | ____|  \/  | ____/ ___|
+#   | | | |_| |  _| | |\/| |  _| \___ \
+#   | | |  _  | |___| |  | | |___ ___) |
+#   |_| |_| |_|_____|_|  |_|_____|____/
+
+# Theming Related Variables
+env = GTK_THEME,Flat-Remix-GTK-Blue-Dark-Solid
+env = XCURSOR_THEME,Nordzy-cursors
+env = XCURSOR_SIZE,30
+# Hyprcursor
+env = HYPRCURSOR_THEME,Nordzy-cursors
+env = HYPRCURSOR_SIZE,30
+# Gtk
+exec = hyprctl setcursor Nordzy-cursors-hyprcursor 30
+exec = gsettings set org.gnome.desktop.interface cursor-theme 'Nordzy-cursors'
+exec = gsettings set org.gnome.desktop.interface cursor-size 30
 
 exec = gsettings set org.gnome.desktop.interface icon-theme 'Flat-Remix-Blue-Dark'
 exec = gsettings set org.gnome.desktop.interface gtk-theme 'Flat-Remix-GTK-Blue-Dark-Solid'
@@ -11,8 +25,3 @@ exec = gsettings set org.gnome.desktop.interface document-font-name 'NotoSans Ne
 exec = gsettings set org.gnome.desktop.interface monospace-font-name 'Hack Nerd Font Mono 12'
 exec = gsettings set org.gnome.desktop.interface font-antialiasing 'rgba'
 exec = gsettings set org.gnome.desktop.interface font-hinting 'full'
-
-env = XCURSOR_THEME,Bibata-Modern-Ice
-env = XCURSOR_SIZE,40
-
-
