--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,5 +1,9 @@
 preload = ~/Pictures/Wallpaper/scukd4Y.jpg
 preload = ~/Pictures/Wallpaper/BysmF32.jpg
 
-wallpaper = DP-2,~/Pictures/Wallpaper/scukd4Y.jpg
-wallpaper = DP-3,~/Pictures/Wallpaper/BysmF32.jpg
+wallpaper = DP-1,~/Pictures/Wallpaper/scukd4Y.jpg
+wallpaper = DP-2,~/Pictures/Wallpaper/BysmF32.jpg
+
+splash = false
+
+ipc = on
