--- a/.wlinitrc
+++ b/.wlinitrc
@@ -1,9 +1,5 @@
 #!/bin/sh
 
-# Hardware cursors not yet working on wlroots
-export WLR_NO_HARDWARE_CURSORS=1
-# Set WLRoots renderer to Vulkan to avoid flickering
-# export WLR_RENDERER=vulkan
 # General wayland environment variables
 export XDG_SESSION_TYPE=wayland
 # Tell QT applications to use the Wayland backend, and fall back to x11 if Wayland is unavailable
@@ -11,26 +7,31 @@ export QT_QPA_PLATFORM="wayland;xcb"
 # Disables window decorations on QT applications
 export QT_WAYLAND_DISABLE_WINDOWDECORATION=1
 # Tells QT based applications to pick your theme from qt5ct, use with Kvantum
-export QT_QPA_PLATFORMTHEME=qt5ct
+export QT_QPA_PLATFORMTHEME=qt6ct
 # enables automatic scaling, based on the monitor’s pixel density
 export QT_AUTO_SCREEN_SCALE_FACTOR=1
 # Firefox wayland environment variable
 export MOZ_ENABLE_WAYLAND=1
 export MOZ_USE_XINPUT2=1
+# Electron
+export ELECTRON_OZONE_PLATFORM_HINT=wayland
 # OpenGL Variables
-export GBM_BACKEND=nvidia-drm
+# export GBM_BACKEND=nvidia-drm
 # export GBM_BACKEND=nvidia
-export __GLX_VENDOR_LIBRARY_NAME=nvidia
+# export __GLX_VENDOR_LIBRARY_NAME=nvidia
 # Hardware acceleration on NVIDIA GPUs
-export LIBVA_DRIVER_NAME=nvidia
-export __GL_GSYNC_ALLOWED=1
-export __GL_VRR_ALLOWED=1
+# export LIBVA_DRIVER_NAME=nvidia
+# export __GL_GSYNC_ALLOWED=1
+# export __GL_SYNC_TO_VBLANK=1
+# export __GL_VRR_ALLOWED=1
 # use legacy DRM interface instead of atomic mode setting. Might fix flickering issues.
-export WLR_DRM_NO_ATOMIC=0
+# export WLR_DRM_NO_ATOMIC=1
+
+export VDPAU_DRIVER=radeonsi
 
 # Run SDL2 applications on Wayland.
 # Remove or set to x11 if games that provide older versions of SDL cause compatibility issues
-# export SDL_VIDEODRIVER=wayland
+# export SDL_VIDEODRIVER="wayland"
 
 # Clutter package already has wayland enabled,
 # this variable will force Clutter applications to try and use the Wayland backend
@@ -39,7 +40,8 @@ export CLUTTER_BACKEND=wayland
 # export SDL_VIDEODRIVER=wayland # Can break some native games
 export KITTY_ENABLE_WAYLAND=1
 
-export GDK_BACKEND="wayland,x11"
+# GTK: Use wayland if available. If not: try x11, then any other GDK backend.
+export GDK_BACKEND="wayland,x11,*"
 
 # Fix possibly broken Java applications. Set to 1 until Wakefield is available.
 export _JAVA_AWT_WM_NONREPARENTING=1
