--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -3,34 +3,73 @@
 ### Use some_parameter=0 to disable a parameter (only works with on/off parameters)
 ### Everything below can be used / overridden with the environment variable MANGOHUD_CONFIG instead
 
-no_display
+################ INFORMATIONAL #################
+## prints possible options on stdout
+# help
 
 ################ PERFORMANCE #################
 
 ### Limit the application FPS. Comma-separated list of one or more FPS values (e.g. 0,30,60). 0 means unlimited (unless VSynced)
 fps_limit=0,60,120
 
+### early = wait before present, late = wait after present
+# fps_limit_method=
+
 ### VSync [0-3] 0 = adaptive; 1 = off; 2 = mailbox; 3 = on
-# vsync=
+# vsync=-1
 
 ### OpenGL VSync [0-N] 0 = off; >=1 = wait for N v-blanks, N > 1 acts as a FPS limiter (FPS = display refresh rate / N)
-# gl_vsync=
+# gl_vsync=-2
+
+### Mip-map LoD bias. Negative values will increase texture sharpness (and aliasing)
+## Positive values will increase texture blurriness (-16 to 16)
+# picmip=-17
+
+### Anisotropic filtering level. Improves sharpness of textures viewed at an angle (0 to 16)
+# af=-1
+
+### Force bicubic filtering
+# bicubic
+
+### Force trilinear filtering
+# trilinear
+
+### Disable linear texture filtering. Makes textures look blocky
+# retro
 
 ################### VISUAL ###################
 
 ### Legacy layout
-# legacy_layout=false
+# legacy_layout=0
+
+### pre defined presets
+# -1 = default
+#  0 = no display
+#  1 = fps only
+#  2 = horizontal view
+#  3 = extended
+#  4 = high detailed information
+# preset=-1
+
+### Enable most of the toggleable parameters (currently excludes `histogram`)
+# full
+
+### Show FPS only. ***Not meant to be used with other display params***
+# fps_only
 
 ### Display custom centered text, useful for a header
 # custom_text_center=
 
 ### Display the current system time
 # time
+## removes the time label
+# time_no_label
 
 ### Time formatting examples
-# time_format=%H:%M
-# time_format=[ %T %F ]
-# time_format=%X # locally formatted time, because of limited glyph range, missing characters may show as '?' (e.g. Japanese)
+## %H:%M
+## [ %T %F ]
+## %X # locally formatted time, because of limited glyph range, missing characters may show as '?' (e.g. Japanese)
+# time_format="%T"
 
 ### Display MangoHud version
 # version
@@ -38,13 +77,19 @@ fps_limit=0,60,120
 ### Display the current GPU information
 gpu_stats
 gpu_temp
+gpu_junction_temp
 gpu_core_clock
+gpu_mem_temp
 gpu_mem_clock
 gpu_power
 gpu_text=GPU
 gpu_load_change
 gpu_load_value=60,90
 gpu_load_color=39F900,FDFD09,B22222
+## GPU fan in rpm on AMD, FAN in percent on NVIDIA
+gpu_fan
+## gpu_voltage only works on AMD GPUs
+gpu_voltage
 
 ### Display the current CPU information
 cpu_stats
@@ -61,7 +106,6 @@ core_load
 core_load_change
 
 ### Display IO read and write for the app (not system)
-io_stats
 io_read
 io_write
 
@@ -79,8 +123,10 @@ swap
 ### Display battery information
 # battery
 # battery_icon
-# gamepad_battery
-# gamepad_battery_icon
+# device_battery=gamepad,mouse
+# device_battery_icon
+# battery_watt
+# battery_time
 
 ### Display FPS and frametime
 fps
@@ -90,12 +136,23 @@ fps_value=30,60
 fps_color=B22222,FDFD09,39F900
 frametime
 # frame_count
+## fps_metrics takes a list of decimal values or the value avg
+# fps_metrics=avg,0.01
+
+### Display GPU throttling status based on Power, current, temp or "other"
+## Only shows if throttling is currently happening
+throttling_status
+## Same as throttling_status but displays throttling on the frametime graph
+#throttling_status_graph
 
 ### Display miscellaneous information
 engine_version
 gpu_name
 vulkan_driver
 wine
+# exec_name
+winesync
+present_mode
 
 ### Display loaded MangoHud architecture
 arch
@@ -107,6 +164,32 @@ frame_timing
 ### Display GameMode / vkBasalt running status
 gamemode
 vkbasalt
+
+### Gamescope related options
+## Display the status of FSR (only works in gamescope)
+# fsr
+## Hides the sharpness info for the `fsr` option (only available in gamescope)
+# hide_fsr_sharpness
+## Shows the graph of gamescope app frametimes and latency (only on gamescope obviously)
+# debug
+## Display the status of HDR (only works in gamescope)
+# hdr
+## Display the current refresh rate (only works in gamescope)
+# refresh_rate
+
+
+### graphs displays one or more graphs that you chose
+## seperated by ",", available graphs are
+## gpu_load,cpu_load,gpu_core_clock,gpu_mem_clock,vram,ram,cpu_temp,gpu_temp
+# graphs=
+
+### mangoapp related options
+## Enables mangoapp to be displayed above the Steam UI
+# mangoapp_steam
+
+### Steam Deck options
+## Shows the Steam Deck fan rpm
+# fan
 
 ### Display current FPS limit
 show_fps_limit
@@ -121,10 +204,19 @@ resolution
 
 ### Display media player metadata
 # media_player
-# media_player_name=spotify
+## for example spotify
+# media_player_name=
 ## Format metadata, lines are delimited by ; (wip)
-# media_player_format={title};{artist};{album}
-# media_player_format=Track:;{title};By:;{artist};From:;{album}
+## example: {title};{artist};{album}
+## example: Track:;{title};By:;{artist};From:;{album}
+# media_player_format=title,artist,album
+
+### Network interface throughput
+# network
+## Network can take arguments but it's not required.
+## without arguments it shows all interfaces
+## arguments set which interfaces will be displayed
+# network=eth0,wlo1
 
 ### Change the hud font size
 font_size=24
@@ -151,22 +243,32 @@ position=top-right
 ### Change the corner roundness
 round_corners=5
 
+### Remove margins around MangoHud
+# hud_no_margin
+
+### Display compact version of MangoHud
+# hud_compact
+
+### Display MangoHud in a horizontal position
+# horizontal
+# horizontal_stretch
+
 ### Disable / hide the hud by default
-# no_display
+no_display
 
 ### Hud position offset
-# offset_x=
-# offset_y=
+# offset_x=0
+# offset_y=0
 
 ### Hud dimensions
-# width=
-# height=
-# table_columns=
-# cellpadding_y=
+# width=0
+# height=140
+# table_columns=3
+# cellpadding_y=-0.085
 
 ### Hud transparency / alpha
 background_alpha=0.5
-# alpha=
+# alpha=1.0
 
 ### FCAT overlay
 ### This enables an FCAT overlay to perform frametime analysis on the final image stream.
@@ -202,8 +304,9 @@ battery_color=FF9078
 
 ### Control over socket
 ### Enable and set socket name, '%p' is replaced with process id
-# control = mangohud
-# control = mangohud-%p
+## example: mangohud
+## example: mangohud-%p
+# control = -1
 
 ################ WORKAROUNDS #################
 ### Options starting with "gl_*" are for OpenGL
@@ -220,6 +323,7 @@ battery_color=FF9078
 
 ### Change toggle keybinds for the hud & logging
 toggle_hud=Shift_R+F12
+# toggle_hud_position=Shift_R+F11
 toggle_fps_limit=Shift_L+F1
 toggle_logging=Shift_L+F2
 reload_cfg=Shift_L+F4
@@ -227,15 +331,21 @@ upload_log=Shift_L+F3
 
 #################### LOG #####################
 ### Automatically start the log after X seconds
-# autostart_log=1
+# autostart_log=
 ### Set amount of time in seconds that the logging will run for
 # log_duration=
-### Change the default log interval, 100 is default
-# log_interval=100
+### Change the default log interval, 0 is default
+# log_interval=0
 ### Set location of the output files (required for logging)
 # output_folder=/home/<USERNAME>/mangologs
 ### Permit uploading logs directly to FlightlessMango.com
-# permit_upload=1
+## set to 1 to enable
+# permit_upload=0
 ### Define a '+'-separated list of percentiles shown in the benchmark results
 ### Use "AVG" to get a mean average. Default percentiles are 97+AVG+1+0.1
-# benchmark_percentiles=97,AVG,1,0.1
+## example: ['97', 'AVG', '1', '0.1']
+# benchmark_percentiles=97,AVG
+## Adds more headers and information such as versioning to the log. This format is not supported on flightlessmango.com (yet)
+# log_versioning
+## Enable automatic uploads of logs to flightlessmango.com
+# upload_logs
