update kitty config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,10 +2,11 @@
 include themes/fjord.conf
 
 # Fonts
-font_family                 Hack Regular Nerd Font Complete Mono
-bold_font                   Hack Bold Nerd Font Complete Mono
-italic_font                 Hack Italic Nerd Font Complete Mono
-bold_italic_font            Hack Bold Italic Nerd Font Complete Mono
+# font_family                 MesloLGS Nerd Font
+# font_family                 MesloLGL Nerd Font
+# font_family                 Hack Nerd font
+font_family                 JetBrainsMono Nerd Font
+# font_family                 JetBrainsMono NF
 font_size                   15.0
 
 # Cursor
@@ -45,12 +46,12 @@ tab_activity_symbol none
 #: leading or trailing spaces, surround the text with quotes. See
 #: tab_title_template for how this is rendered.
 
+
+# clipboard_control write-clipboard write-primary # read-clipboard-ask read-primary-ask
+# clipboard_max_size 512
+
+
 allow_remote_control no
-
-clipboard_control write-clipboard write-primary # read-clipboard-ask read-primary-ask
-clipboard_max_size 512
-
-
 #: Allow other programs to control kitty. If you turn this on, other
 #: programs can control all aspects of kitty, including sending text
 #: to kitty windows, opening new windows, closing windows, reading the
