--- a/.config/hypr/config/rules.conf
+++ b/.config/hypr/config/rules.conf
@@ -5,6 +5,28 @@
 # |_| \_\\___/|_____|_____|____/
 # See https://wiki.hyprland.org/Configuring/Window-Rules/
 
+layerrule = blur, swaync-control-center
+layerrule = blur, swaync-notification-window
+layerrule = ignorezero, swaync-control-center
+layerrule = ignorezero, swaync-notification-window
+layerrule = ignorealpha 0.5, swaync-control-center
+layerrule = ignorealpha 0.5, swaync-notification-window
+
+# windowrulev2 = immediate, class:^(steam_app_default)$
+windowrulev2 = fullscreen, class:^(steam_app_default)$
+
+# gaps_when_only
+workspace = w[tv1], gapsout:0, gapsin:0, shadow:0
+workspace = f[1], gapsout:0, gapsin:0, shwadow:0
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+
+# reactive border and rounding on special work
+windowrulev2 = bordersize 2, onworkspace:s[1],
+windowrulev2 = rounding 5, onworkspace:s[1],
+
 windowrulev2 = noanim, floating:1
 
 # Floats
@@ -24,37 +46,38 @@ windowrulev2 = float, class:^(pavucontrol)$
 windowrulev2 = float, class:^(blueman-manager)$
 windowrulev2 = float, class:^(nm-applet)$
 windowrulev2 = float, class:^(nm-connection-editor)$
+windowrulev2 = float, class:^(io.github.efogdev.mpris-timer)$
 
 windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 
 # Dialogs
-windowrule = float, title:^(Open File)(.*)$
-windowrule = center, title:^(Open File)(.*)$
-windowrule = float, title:^(Select a File)(.*)$
-windowrule = center, title:^(Select a File)(.*)$
-windowrule = float, title:^(Choose wallpaper)(.*)$
-windowrule = center, title:^(Choose wallpaper)(.*)$
-windowrule = float, title:^(Open Folder)(.*)$
-windowrule = center, title:^(Open Folder)(.*)$
-windowrule = float, title:^(Save As)(.*)$
-windowrule = center, title:^(Save As)(.*)$
-windowrule = float, title:^(Library)(.*)$
-windowrule = center, title:^(Library)(.*)$
-windowrule = float, title:^(File Upload)(.*)$
-windowrule = center, title:^(File Upload)(.*)$
-windowrule = float, title:^(Import Bookmarks File)(.*)$
-windowrule = center, title:^(Import Bookmarks File)(.*)$
+windowrule = float,   title:^(Open File)(.*)$
+windowrule = center,  title:^(Open File)(.*)$
+windowrule = float,   title:^(Select a File)(.*)$
+windowrule = center,  title:^(Select a File)(.*)$
+windowrule = float,   title:^(Choose wallpaper)(.*)$
+windowrule = center,  title:^(Choose wallpaper)(.*)$
+windowrule = float,   title:^(Open Folder)(.*)$
+windowrule = center,  title:^(Open Folder)(.*)$
+windowrule = float,   title:^(Save As)(.*)$
+windowrule = center,  title:^(Save As)(.*)$
+windowrule = float,   title:^(Library)(.*)$
+windowrule = center,  title:^(Library)(.*)$
+windowrule = float,   title:^(File Upload)(.*)$
+windowrule = center,  title:^(File Upload)(.*)$
+windowrule = float,   title:^(Import Bookmarks File)(.*)$
+windowrule = center,  title:^(Import Bookmarks File)(.*)$
 
-windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$, title:^(Select a directory)$
-windowrulev2 = center, class:^(xdg-desktop-portal-gtk)$, title:^(Select a directory)$
-windowrulev2 = size 80% 80%, class:^(xdg-desktop-portal-gtk)$, title:^(Select a directory)$
+windowrulev2 = float,         class:^(xdg-desktop-portal-gtk)$, title:^(Select a directory)$
+windowrulev2 = center,        class:^(xdg-desktop-portal-gtk)$, title:^(Select a directory)$
+windowrulev2 = size 80% 80%,  class:^(xdg-desktop-portal-gtk)$, title:^(Select a directory)$
 
 # File-Roller
 windowrulev2 = workspace special:fileroller, class:^(org.gnome.FileRoller)$
-windowrulev2 = suppressevent maximize, class:^(org.gnome.FileRoller)$
-windowrulev2 = float, class:^(org.gnome.FileRoller)$
-windowrulev2 = size 70% 80%, class:^(org.gnome.FileRoller)$
-windowrulev2 = center, class:^(org.gnome.FileRoller)$
+# windowrulev2 = suppressevent maximize, class:^(org.gnome.FileRoller)$
+# windowrulev2 = float, class:^(org.gnome.FileRoller)$
+# windowrulev2 = size 70% 80%, class:^(org.gnome.FileRoller)$
+# windowrulev2 = center, class:^(org.gnome.FileRoller)$
 
 # Thunar
 # windowrulev2 = workspace 3 silent, class:^(thunar)$
@@ -73,8 +96,10 @@ windowrulev2 = size 50% 80%, class:^(clipse-float)$
 windowrulev2 = center, class:^(clipse-float)$
 
 # PoB
-windowrulev2 = tile, class:^(path of building.exe)$
-windowrulev2 = workspace 2 silent, class:^(path of building.exe)$
+windowrulev2 = tile, class:^(path of building(|-poe2).exe)$
+windowrulev2 = workspace 2 silent, class:^(path of building(|-poe2).exe)$
+windowrulev2 = tile,class:^(steam_proton)$, initialTitle:^(Path of Building \(PoE2\))$
+windowrulev2 = workspace 2 silent,class:^(steam_proton)$, initialTitle:^(Path of Building \(PoE2\))$
 
 # gnome Calculator
 windowrulev2 = float, class:^(org.gnome.Calculator)$
@@ -108,7 +133,10 @@ windowrulev2 = workspace special:shr silent, title:^(Firefox — Sharing Indicat
 windowrulev2 = workspace special:shr silent, title:^(.*is sharing (your screen|a window)\.)$
 
 # Joplin
-windowrulev2 = workspace 2 silent, class:^(Joplin)$
+windowrulev2 = workspace 2 silent, class:^(Joplin|@joplin/app-desktop)$
+
+# Corectrl
+# windowrulev2 = workspace special:corectrl, class:^(org.corectrl.CoreCtrl)$
 
 # Steam
 windowrulev2 = workspace 4 silent, class:^([Ss]team)$
@@ -117,6 +145,9 @@ $steam_float = (Special Offers)
 windowrulev2 = float, class:^(steam)$, title:^($steam_float)$
 windowrulev2 = size 30% 60%, class:^(steam)$, title:^($steam_float)$
 windowrulev2 = center, floating:1, class:^(steam)$, title:^($steam_float)$
+
+# Heroic
+windowrulev2 = workspace 4 silent, class:^(heroic)$
 
 # Persepolis
 windowrulev2 = float, class:^(com.github.persepolisdm.persepolis)$
@@ -133,10 +164,10 @@ windowrulev2 = workspace 2 silent, class:^(org-jdownloader-update-launcher-JDLau
 
 # Lutris
 $lutris_float = (Configure.*|Add a new game|Lutris settings).*
-windowrulev2 = workspace 4 silent, class:^(lutris)$
-windowrulev2 = float, class:^(lutris)$, title:^($lutris_float)$
-windowrulev2 = size 60% 90%, class:^(lutris)$, title:^($lutris_float)$
-windowrulev2 = center, class:^(lutris)$, title:^($lutris_float)$
+windowrulev2 = workspace 4 silent, class:^(net.lutris.Lutris)$
+windowrulev2 = float, class:^(net.lutris.Lutris)$, title:^($lutris_float)$
+windowrulev2 = size 60% 90%, class:^(net.lutris.Lutris)$, title:^($lutris_float)$
+windowrulev2 = center, class:^(net.lutris.Lutris)$, title:^($lutris_float)$
 
 # Bottles
 windowrulev2 = workspace 4 silent, class:^(com.usebottles.bottles)$
@@ -148,10 +179,10 @@ windowrulev2 = workspace 8 silent, class:^(virt-manager)$
 
 # start spotify tiled in ws8
 # windowrulev2 = tile, class:^(Spotify)$
-windowrulev2 = workspace 7 silent, title:^(Spotify Premium)$
+windowrulev2 = workspace 7 silent, class:^([Ss]potify)$
 
 # Jellyfin Media Player
-windowrulev2 = workspace 6 silent, class:^(Jellyfin Media Player|org.jellyfin.jellyfinmediaplayer)$
+windowrulev2 = workspace 6 silent, class:^(Jellyfin Media Player|org.jellyfin.jellyfinmediaplayer|com.github.iwalton3.jellyfin-media-player)$
 
 # Guitarix
 windowrulev2 = workspace 9 silent, class:^(guitarix)$
@@ -160,14 +191,22 @@ windowrulev2 = workspace 9 silent, class:^(guitarix)$
 windowrulev2 = float, class:^(galculator)$
 windowrulev2 = size 25% 50%, class:^(galculator)$
 
+# Qalculate
+windowrulev2 = float, class:^(qalculate-(gtk|qt))$
+windowrulev2 = size 1100 800, class:^(qalculate-(gtk|qt))$
+
+
 # idle inhibit while watching videos
 # windowrulev2 = idleinhibit focus, class:^(mpv|.+exe)$
 # windowrulev2 = idleinhibit focus, class:^(firefox)$, title:^(.*YouTube.*)$
 # windowrulev2 = idleinhibit fullscreen, class:^(firefox)$
 #
-# windowrulev2 = idleinhibit focus, class:^(steam_app.*)$
+windowrulev2 = idleinhibit focus, class:^(steam_app.*)$
+
+# fullscreen steam games
+windowrulev2 = fullscreen, class:^(steam_app.*)$
 
 # fix xwayland apps
 windowrulev2 = dimaround, class:^(gcr-prompter)$
 # windowrulev2 = rounding 0, xwayland:1, floating:0
-windowrulev2 = rounding 0, floating:0
+# windowrulev2 = rounding 0, floating:0
