--- a/.config/hypr/config/env.conf
+++ b/.config/hypr/config/env.conf
@@ -7,33 +7,33 @@
 
 # ######### Input method ##########
 # See https://fcitx-im.org/wiki/Using_Fcitx_5_on_Wayland
-env = QT_IM_MODULE, fcitx
-env = XMODIFIERS, @im=fcitx
-# env = GTK_IM_MODULE, wayland   # Crashes electron apps in xwayland
-# env = GTK_IM_MODULE, fcitx     # My Gtk apps no longer require this to work with fcitx5 hmm
-env = SDL_IM_MODULE, fcitx
-env = GLFW_IM_MODULE, ibus
-env = INPUT_METHOD, fcitx
+# env = QT_IM_MODULE, fcitx
+# env = XMODIFIERS, @im=fcitx
+# # env = GTK_IM_MODULE, wayland   # Crashes electron apps in xwayland
+# # env = GTK_IM_MODULE, fcitx     # My Gtk apps no longer require this to work with fcitx5 hmm
+# env = SDL_IM_MODULE, fcitx
+# env = GLFW_IM_MODULE, ibus
+# env = INPUT_METHOD, fcitx
 
 env = LOGOUT_CMD,hyprctl dispatch exit 0
 
 # Toolkit Backend Variables
-env = GDK_BACKEND,wayland,x11,* # GTK: Use wayland if available. If not: try x11, then any other GDK backend.
-env = QT_QPA_PLATFORM,wayland;xcb # Qt: Use wayland if available, fall back to x11 if not.
+env = GDK_BACKEND, wayland,x11,* # GTK: Use wayland if available. If not: try x11, then any other GDK backend.
+env = QT_QPA_PLATFORM, wayland;xcb # Qt: Use wayland if available, fall back to x11 if not.
 # Cause Elden Ring to fail to initilize dependencies
 # env = SDL_VIDEODRIVER,wayland # Run SDL2 applications on Wayland. Remove or set to x11 if games that provide older versions of SDL cause compatibility issues
-env = CLUTTER_BACKEND,wayland # Clutter package already has wayland enabled, this variable will force Clutter applications to try and use the Wayland backend
+env = CLUTTER_BACKEND, wayland # Clutter package already has wayland enabled, this variable will force Clutter applications to try and use the Wayland backend
 
 # XDG Specifications
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
+env = XDG_CURRENT_DESKTOP, Hyprland
+env = XDG_SESSION_TYPE, wayland
+env = XDG_SESSION_DESKTOP, Hyprland
 
 # Qt Variables
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1 # (From the Qt documentation) enables automatic scaling, based on the monitor’s pixel density
-env = QT_QPA_PLATFORM,wayland;xcb # Tell Qt applications to use the Wayland backend, and fall back to x11 if Wayland is unavailable
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1 # Disables window decorations on Qt applications
-env = QT_QPA_PLATFORMTHEME,qt6ct # Tells Qt based applications to pick your theme from qt5ct, use with Kvantum.
+env = QT_AUTO_SCREEN_SCALE_FACTOR, 1 # (From the Qt documentation) enables automatic scaling, based on the monitor’s pixel density
+# env = QT_QPA_PLATFORM, wayland;xcb # Tell Qt applications to use the Wayland backend, and fall back to x11 if Wayland is unavailable
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION, 1 # Disables window decorations on Qt applications
+env = QT_QPA_PLATFORMTHEME, qt6ct # Tells Qt based applications to pick your theme from qt5ct, use with Kvantum.
 
 # Electron
-env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+env = ELECTRON_OZONE_PLATFORM_HINT, wayland
