--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -38,8 +38,11 @@ source = $HOME/.config/hypr/config/rules.conf
 # |_|  |_|\___/|_| \_|___| |_| \___/|_| \_\____/
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
+# monitor = DP-1, 2560x1440@120, 0x0, 1
 monitor = DP-1, 2560x1440@60, 0x0, 1
 monitor = DP-2, 1920x1080@60, 2560x180, 1
+# monitor = DP-1, preferred, 0x0, auto
+# monitor = DP-2, preferred, 2560x180, auto
 
 #     _   _   _ _____ ___  ____ _____  _    ____ _____
 #    / \ | | | |_   _/ _ \/ ___|_   _|/ \  |  _ \_   _|
@@ -57,21 +60,15 @@ exec-once = /usr/lib/kdeconnectd
 exec-once = wl-clip-persist --clipboard regular
 exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
-exec-once = dunst
+# exec-once = dunst
+exec-once = swaync
 exec-once = udiskie --appindicator
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
 exec-once = easyeffects --gapplication-service
 exec-once = kdeconnect-indicator
-exec-once = mullvad-vpn
-# exec-once = persepolis --tray # broke waybar tooltip
-# exec-once = [workspace special:term silent] $terminal --title term
-# exec-once = [workspace special:tuifm silent] $terminal --title tuifm $file_manager_tui
-# exec-once = [workspace special:term1 silent] $terminal --title term1
-# exec-once = [workspace special:term2 silent] $terminal --title term2
-# exec-once = [workspace special:term3 silent] $terminal --title term3
-# exec-once = [workspace special:term4 silent] $terminal --title term4
-exec-once = [workspace special:mousai silent] io.github.seadve.mousai
+# exec-once = mullvad-vpn
+# exec-once = [workspace special:mousai silent] io.github.seadve.mousai
 # exec-once = [workspace special:easyeffects silent] easyeffects
 # exec-once = [workspace special:filemanager silent] $TERMINAL --class="yazi" -e $FILE_MANAGER_TUI
 # exec-once = [workspace 3 silent] $FILE_MANAGER_GUI
@@ -90,6 +87,10 @@ exec = hyprpaper
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
+  no_border_on_floating = false
+
+  resize_on_border = false
+
   gaps_in = 5
   gaps_out = 10
   gaps_workspaces = 0 # gaps between workspaces. Stacks with gaps_out
@@ -100,12 +101,21 @@ general {
 
   layout = master
 
-  allow_tearing = false
+  allow_tearing = true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-  rounding = 5
+  rounding = 10
+
+  shadow {
+    enabled = true
+    ignore_window = true
+    range = 10
+    render_power = 3
+    color = rgba(00000099)
+    # color = rgba(1a1a1aee)
+  }
 
   blur {
     enabled = true
@@ -115,13 +125,6 @@ decoration {
     xray = false
   }
 
-  drop_shadow = true
-  shadow_ignore_window = true
-  shadow_offset = 0 5
-  shadow_range = 50
-  shadow_render_power = 3
-  col.shadow = rgba(00000099)
-  # col.shadow = rgba(1a1a1aee)
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
@@ -133,20 +136,21 @@ animations {
 dwindle {
   pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
   preserve_split = true # you probably want this
-  no_gaps_when_only = 1
+  # no_gaps_when_only = 1
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/
 master {
-  special_scale_factor = 0.9
+  special_scale_factor = 0.98
   mfact = 0.5
   new_status = slave
   new_on_top = false
   new_on_active = none
-  no_gaps_when_only = 1
+  # no_gaps_when_only = 1
   # inherit_fullscreen = false
   orientation = left
-  always_center_master = false
+  # always_center_master = false
+  slave_count_for_center_master = false
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
@@ -244,23 +248,35 @@ device {
 #    \_/\_/  \___/|_| \_\_|\_\____/|_| /_/   \_\____|_____|____/
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/
 
-workspace = 1, monitor:DP-1, default:true
-workspace = 2, monitor:DP-1
-workspace = 3, monitor:DP-1, on-created-empty:[tile] $FILE_MANAGER_GUI
-workspace = 4, monitor:DP-1
-workspace = 5, monitor:DP-1, on-created-empty:$TERMINAL
-workspace = 6, monitor:DP-1
-workspace = 7, monitor:DP-2, on-created-empty:[tile] spotify
-workspace = 8, monitor:DP-2
-workspace = 9, monitor:DP-2,
-workspace = 10, monitor:DP-2, default:true
+workspace = 1,     monitor:DP-1, default:true
+workspace = 2,     monitor:DP-1
+workspace = 3,     monitor:DP-1, on-created-empty:[tile] $FILE_MANAGER_GUI
+workspace = 4,     monitor:DP-1
+workspace = 5,     monitor:DP-1, on-created-empty:$TERMINAL
+workspace = 6,     monitor:DP-1
+workspace = 7,     monitor:DP-1
+workspace = 8,     monitor:DP-1
+workspace = 9,     monitor:DP-1
+workspace = 10,    monitor:DP-1
+
+workspace = 11,    monitor:DP-2, default:true
+workspace = 12,    monitor:DP-2
+workspace = 13,    monitor:DP-2
+workspace = 14,    monitor:DP-2
+workspace = 15,    monitor:DP-2
+workspace = 16,    monitor:DP-2
+workspace = 17,    monitor:DP-2
+workspace = 18,    monitor:DP-2
+workspace = 19,    monitor:DP-2
+workspace = 20,    monitor:DP-2
 
 # workspace = special:tuifm, on-created-empty:$TERMINAL --title tuifm $FILE_MANAGER_TUI
-workspace = special:filemanager, on-created-empty:$TERMINAL --class="yazi" -e $FILE_MANAGER_TUI
-workspace = special:mousai, on-created-empty:io.github.seadve.Mousai
-workspace = special:easyeffects, on-created-empty:easyeffects
-workspace = special:term, on-created-empty:$TERMINAL --title term
-# workspace = special:term1, on-created-empty:$TERMINAL --title term
-workspace = special:term2, on-created-empty:$TERMINAL --title term
-workspace = special:term3, on-created-empty:$TERMINAL --title term
-workspace = special:term4, on-created-empty:$TERMINAL --title term
+workspace = special:filemanager,  on-created-empty:$TERMINAL --class="yazi" -e $FILE_MANAGER_TUI
+workspace = special:mousai,       on-created-empty:io.github.seadve.Mousai
+workspace = special:easyeffects,  on-created-empty:easyeffects
+# workspace = special:spotify,      on-created-empty:spotify
+workspace = special:term,         on-created-empty:$TERMINAL --title term
+# workspace = special:term1,        on-created-empty:$TERMINAL --title term
+workspace = special:term2,        on-created-empty:$TERMINAL --title term
+workspace = special:term3,        on-created-empty:$TERMINAL --title term
+workspace = special:term4,        on-created-empty:$TERMINAL --title term
