update kitty config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,7 +7,7 @@ include themes/fjord.conf
 # font_family                 Hack Nerd font
 font_family                 JetBrainsMono Nerd Font
 # font_family                 JetBrainsMono NF
-font_size                   15.0
+font_size                   18.0
 
 # Cursor
 cursor_shape                underline
@@ -19,6 +19,8 @@ scrollback_lines            10000
 url_style curly
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, straight, double, curly, dotted, dashed.
+
+enabled_layouts Horizontal,Vertical
 
 # Bell
 enable_audio_bell no
@@ -76,3 +78,9 @@ allow_remote_control no
 
 #: yes
 #:     Remote control requests are always accepted.
+
+map ctrl+alt+shift+right    next_tab
+map ctrl+alt+shift+left     previous_tab
+
+map ctrl+shift+right        next_window
+map ctrl+shift+left         previous_window
